// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateSheets generates data entry sheets 1`] = `
"%PDF-1.3
%ºß¬à
3 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 4 0 R
>>
endobj
4 0 obj
<<
/Length 479
>>
stream
0.57 w
0 G
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #01) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-randomness) Tj
ET
endstream
endobj
5 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 6 0 R
>>
endobj
6 0 obj
<<
/Length 489
>>
stream
0.57 w
0 G
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #02) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-secondary-randomness) Tj
ET
endstream
endobj
1 0 obj
<</Type /Pages
/Kids [3 0 R 5 0 R ]
/Count 2
>>
endobj
7 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
8 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
9 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Helvetica-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
11 0 obj
<<
/Type /Font
/BaseFont /Courier
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
12 0 obj
<<
/Type /Font
/BaseFont /Courier-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
13 0 obj
<<
/Type /Font
/BaseFont /Courier-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
14 0 obj
<<
/Type /Font
/BaseFont /Courier-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
15 0 obj
<<
/Type /Font
/BaseFont /Times-Roman
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
16 0 obj
<<
/Type /Font
/BaseFont /Times-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
17 0 obj
<<
/Type /Font
/BaseFont /Times-Italic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
18 0 obj
<<
/Type /Font
/BaseFont /Times-BoldItalic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
19 0 obj
<<
/Type /Font
/BaseFont /ZapfDingbats
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
20 0 obj
<<
/Type /Font
/BaseFont /Symbol
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
2 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/Font <<
/F1 7 0 R
/F2 8 0 R
/F3 9 0 R
/F4 10 0 R
/F5 11 0 R
/F6 12 0 R
/F7 13 0 R
/F8 14 0 R
/F9 15 0 R
/F10 16 0 R
/F11 17 0 R
/F12 18 0 R
/F13 19 0 R
/F14 20 0 R
>>
/XObject <<
>>
>>
endobj
21 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
22 0 obj
<<
/Producer (jsPDF 1.5.3)
/
>>
endobj
23 0 obj
<<
/Type /Catalog
/Pages 1 0 R
/OpenAction [3 0 R /FitH null]
/PageLayout /OneColumn
/OpenAction 21 0 R
>>
endobj
xref
0 24
0000000000 65535 f 
0000001303 00000 n 
0000003128 00000 n 
0000000015 00000 n 
0000000124 00000 n 
0000000654 00000 n 
0000000763 00000 n 
0000001366 00000 n 
0000001491 00000 n 
0000001621 00000 n 
0000001754 00000 n 
0000001892 00000 n 
0000002016 00000 n 
0000002145 00000 n 
0000002277 00000 n 
0000002413 00000 n 
0000002541 00000 n 
0000002668 00000 n 
0000002797 00000 n 
0000002930 00000 n 
0000003032 00000 n 
0000003378 00000 n 
0000003434 00000 n 
0000003520 00000 n 
trailer
<<
/Size 24
/Root 23 0 R
/Info 22 0 R
/
>>
startxref
3643
%%EOF"
`;

exports[`generateSheets generates data entry sheets with ballotless audit board 1`] = `
"%PDF-1.3
%ºß¬à
3 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 4 0 R
>>
endobj
4 0 obj
<<
/Length 479
>>
stream
0.57 w
0 G
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #01) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-randomness) Tj
ET
endstream
endobj
5 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 6 0 R
>>
endobj
6 0 obj
<<
/Length 489
>>
stream
0.57 w
0 G
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #02) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-secondary-randomness) Tj
ET
endstream
endobj
7 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 8 0 R
>>
endobj
8 0 obj
<<
/Length 489
>>
stream
0.57 w
0 G
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #02) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-secondary-randomness) Tj
ET
endstream
endobj
9 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 10 0 R
>>
endobj
10 0 obj
<<
/Length 88
>>
stream
0.57 w
0 G
BT
/F1 14 Tf
16.10 TL
0 g
56.69 735.31 Td
(Audit Board #01: No ballots) Tj
ET
endstream
endobj
1 0 obj
<</Type /Pages
/Kids [3 0 R 5 0 R 7 0 R 9 0 R ]
/Count 4
>>
endobj
11 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
12 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
13 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
14 0 obj
<<
/Type /Font
/BaseFont /Helvetica-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
15 0 obj
<<
/Type /Font
/BaseFont /Courier
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
16 0 obj
<<
/Type /Font
/BaseFont /Courier-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
17 0 obj
<<
/Type /Font
/BaseFont /Courier-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
18 0 obj
<<
/Type /Font
/BaseFont /Courier-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
19 0 obj
<<
/Type /Font
/BaseFont /Times-Roman
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
20 0 obj
<<
/Type /Font
/BaseFont /Times-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
21 0 obj
<<
/Type /Font
/BaseFont /Times-Italic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
22 0 obj
<<
/Type /Font
/BaseFont /Times-BoldItalic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
23 0 obj
<<
/Type /Font
/BaseFont /ZapfDingbats
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
24 0 obj
<<
/Type /Font
/BaseFont /Symbol
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
2 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/Font <<
/F1 11 0 R
/F2 12 0 R
/F3 13 0 R
/F4 14 0 R
/F5 15 0 R
/F6 16 0 R
/F7 17 0 R
/F8 18 0 R
/F9 19 0 R
/F10 20 0 R
/F11 21 0 R
/F12 22 0 R
/F13 23 0 R
/F14 24 0 R
>>
/XObject <<
>>
>>
endobj
25 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
26 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
27 0 obj
<<
/Producer (jsPDF 1.5.3)
/
>>
endobj
28 0 obj
<<
/Type /Catalog
/Pages 1 0 R
/OpenAction [3 0 R /FitH null]
/PageLayout /OneColumn
/OpenAction 25 0 R
/OpenAction 26 0 R
>>
endobj
xref
0 29
0000000000 65535 f 
0000002201 00000 n 
0000004041 00000 n 
0000000015 00000 n 
0000000124 00000 n 
0000000654 00000 n 
0000000763 00000 n 
0000001303 00000 n 
0000001412 00000 n 
0000001952 00000 n 
0000002062 00000 n 
0000002276 00000 n 
0000002402 00000 n 
0000002533 00000 n 
0000002667 00000 n 
0000002805 00000 n 
0000002929 00000 n 
0000003058 00000 n 
0000003190 00000 n 
0000003326 00000 n 
0000003454 00000 n 
0000003581 00000 n 
0000003710 00000 n 
0000003843 00000 n 
0000003945 00000 n 
0000004294 00000 n 
0000004350 00000 n 
0000004406 00000 n 
0000004492 00000 n 
trailer
<<
/Size 29
/Root 28 0 R
/Info 27 0 R
/
>>
startxref
4634
%%EOF"
`;
